// This file is licensed under the Elastic License 2.0. Copyright 2021-present, StarRocks Limited.

syntax="proto2";

package starrocks.lake;
option java_package = "com.starrocks.lake.proto";

message BinaryPredicatePB {
    optional string column_name = 1;
    optional string op = 2;
    optional string value = 3;
}

message IsNullPredicatePB {
    optional string column_name = 1;
    optional bool is_not_null = 2;
}

message InPredicatePB {
    optional string column_name = 1;
    optional bool is_not_in = 2;
    repeated string values = 3;
}

message DeletePredicatePB {
    repeated BinaryPredicatePB binary_predicates = 1;
    repeated IsNullPredicatePB is_null_predicates = 2;
    repeated InPredicatePB in_predicates = 3;
}
